--- a/app/src/main/res/layout/dialog_image.xml
+++ b/app/src/main/res/layout/dialog_image.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<uk.co.senab.photoview.PhotoView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/image"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <ImageView
-        android:id="@+id/image"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:contentDescription="@string/app_name" />
-</LinearLayout>
+    android:adjustViewBounds="true"
+    android:src="@drawable/fridge_placeholder"
+    android:contentDescription="@string/app_name"/>
