--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,26 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:font="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="@dimen/activity_vertical_margin">
 
-    <ImageView
-        android:id="@+id/image_profile"
+    <LinearLayout
+        android:id="@+id/holder_profile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/padding_normal"
-        android:src="@mipmap/ic_launcher"
-        tools:ignore="UnusedAttribute" />
+        android:background="@drawable/material_background"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/image_profile"
+            android:layout_width="@dimen/profile_image_size"
+            android:layout_height="@dimen/profile_image_size"
+            android:adjustViewBounds="true"
+            android:layout_margin="@dimen/padding_normal"
+            android:layout_gravity="center"
+            android:src="@mipmap/ic_launcher"
+            android:contentDescription="@string/app_name" />
+
+        <com.app.afridge.views.AdvancedTextView
+            android:id="@+id/text_username"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:padding="@dimen/padding_normal"
+            android:text="@string/app_name"
+            android:textColor="@color/text_icons"
+            android:textSize="@dimen/text_size_large"
+            font:customFont="@string/font_light" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <com.app.afridge.views.AdvancedTextView
+            android:id="@+id/text_item_count"
+            android:drawableStart="@drawable/ic_profile_fridge"
+            android:drawableLeft="@drawable/ic_profile_fridge"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="start|center_vertical"
+            android:layout_weight="1"
+            android:background="#8BC34A"
+            android:padding="@dimen/padding_normal"
+            android:text="@string/app_name"
+            android:textColor="@color/text_icons"
+            android:textSize="@dimen/text_action_size"
+            font:customFont="@string/font_light" />
+
+        <com.app.afridge.views.AdvancedTextView
+            android:id="@+id/text_notes_count"
+            android:drawableStart="@drawable/ic_profile_note"
+            android:drawableLeft="@drawable/ic_profile_note"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="#FF9800"
+            android:gravity="start|center_vertical"
+            android:padding="@dimen/padding_normal"
+            android:text="@string/app_name"
+            android:textColor="@color/text_icons"
+            android:textSize="@dimen/text_action_size"
+            font:customFont="@string/font_light" />
+    </LinearLayout>
 
     <com.app.afridge.views.AdvancedTextView
-        android:id="@+id/text_username"
+        android:id="@+id/text_random_stat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/padding_small"
-        android:gravity="center"
+        android:drawableStart="@drawable/ic_random"
+        android:drawableLeft="@drawable/ic_random"
+        android:gravity="start|center_vertical"
         android:padding="@dimen/padding_normal"
         android:text="@string/app_name"
         android:textColor="@color/text_primary"
@@ -81,18 +138,23 @@
         android:textSize="@dimen/text_button_size"
         font:customFont="@string/font_light" />
 
-    <com.app.afridge.views.AdvancedTextView
-        android:id="@+id/button_logout"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:layout_margin="@dimen/padding_small"
-        android:background="@color/primary"
-        android:gravity="center"
-        android:padding="@dimen/padding_normal"
-        android:text="@string/logout"
-        android:textColor="@color/text_icons"
-        android:textSize="@dimen/text_button_size"
-        font:customFont="@string/font_light" />
+        android:layout_height="match_parent">
+
+        <com.app.afridge.views.AdvancedTextView
+            android:id="@+id/button_logout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_margin="@dimen/padding_small"
+            android:background="@color/primary"
+            android:gravity="center"
+            android:padding="@dimen/padding_normal"
+            android:text="@string/logout"
+            android:textColor="@color/text_icons"
+            android:textSize="@dimen/text_button_size"
+            font:customFont="@string/font_light" />
+    </RelativeLayout>
 
 </LinearLayout>
