--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,163 +1,181 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.SwipeRefreshLayout android:id="@+id/pull_to_refresh_sync"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:font="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="@dimen/activity_vertical_margin">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <LinearLayout
-        android:id="@+id/holder_profile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/material_background"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="@dimen/activity_vertical_margin">
 
-        <ImageView
-            android:id="@+id/image_profile"
-            android:layout_width="@dimen/profile_image_size"
-            android:layout_height="@dimen/profile_image_size"
-            android:adjustViewBounds="true"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:layout_marginStart="@dimen/padding_normal"
-            android:layout_marginEnd="@dimen/padding_normal"
-            android:layout_marginBottom="@dimen/padding_normal"
-            android:layout_gravity="center"
-            android:src="@mipmap/ic_launcher"
-            android:contentDescription="@string/app_name" />
-
-        <com.app.afridge.views.AdvancedTextView
-            android:id="@+id/text_username"
+        <LinearLayout
+            android:id="@+id/holder_profile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
+            android:background="@drawable/material_background"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/image_profile"
+                android:layout_width="@dimen/profile_image_size"
+                android:layout_height="@dimen/profile_image_size"
+                android:layout_gravity="center"
+                android:layout_marginBottom="@dimen/padding_normal"
+                android:layout_marginEnd="@dimen/padding_normal"
+                android:layout_marginStart="@dimen/padding_normal"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:adjustViewBounds="true"
+                android:contentDescription="@string/app_name"
+                android:src="@mipmap/ic_launcher" />
+
+            <com.app.afridge.views.AdvancedTextView
+                android:id="@+id/text_username"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:padding="@dimen/padding_normal"
+                android:text="@string/app_name"
+                android:textColor="@color/text_icons"
+                android:textSize="@dimen/text_size_large"
+                font:customFont="@string/font_light" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <com.app.afridge.views.AdvancedTextView
+                android:id="@+id/text_item_count"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="#8BC34A"
+                android:drawableLeft="@drawable/ic_profile_fridge"
+                android:drawableStart="@drawable/ic_profile_fridge"
+                android:gravity="start|center_vertical"
+                android:padding="@dimen/padding_normal"
+                android:text="@string/app_name"
+                android:textColor="@color/text_icons"
+                android:textSize="@dimen/text_action_size"
+                font:customFont="@string/font_light" />
+
+            <com.app.afridge.views.AdvancedTextView
+                android:id="@+id/text_notes_count"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="#FF9800"
+                android:drawableLeft="@drawable/ic_profile_note"
+                android:drawableStart="@drawable/ic_profile_note"
+                android:gravity="start|center_vertical"
+                android:padding="@dimen/padding_normal"
+                android:text="@string/app_name"
+                android:textColor="@color/text_icons"
+                android:textSize="@dimen/text_action_size"
+                font:customFont="@string/font_light" />
+        </LinearLayout>
+
+        <com.app.afridge.views.AdvancedTextView
+            android:id="@+id/text_random_stat"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/ic_random"
+            android:drawableStart="@drawable/ic_random"
+            android:gravity="start|center_vertical"
             android:padding="@dimen/padding_normal"
             android:text="@string/app_name"
-            android:textColor="@color/text_icons"
+            android:textColor="@color/text_primary"
             android:textSize="@dimen/text_size_large"
             font:customFont="@string/font_light" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
 
         <com.app.afridge.views.AdvancedTextView
-            android:id="@+id/text_item_count"
-            android:drawableStart="@drawable/ic_profile_fridge"
-            android:drawableLeft="@drawable/ic_profile_fridge"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="start|center_vertical"
-            android:layout_weight="1"
-            android:background="#8BC34A"
-            android:padding="@dimen/padding_normal"
-            android:text="@string/app_name"
-            android:textColor="@color/text_icons"
-            android:textSize="@dimen/text_action_size"
-            font:customFont="@string/font_light" />
-
-        <com.app.afridge.views.AdvancedTextView
-            android:id="@+id/text_notes_count"
-            android:drawableStart="@drawable/ic_profile_note"
-            android:drawableLeft="@drawable/ic_profile_note"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="#FF9800"
-            android:gravity="start|center_vertical"
-            android:padding="@dimen/padding_normal"
-            android:text="@string/app_name"
-            android:textColor="@color/text_icons"
-            android:textSize="@dimen/text_action_size"
-            font:customFont="@string/font_light" />
-    </LinearLayout>
-
-    <com.app.afridge.views.AdvancedTextView
-        android:id="@+id/text_random_stat"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:drawableStart="@drawable/ic_random"
-        android:drawableLeft="@drawable/ic_random"
-        android:gravity="start|center_vertical"
-        android:padding="@dimen/padding_normal"
-        android:text="@string/app_name"
-        android:textColor="@color/text_primary"
-        android:textSize="@dimen/text_size_large"
-        font:customFont="@string/font_light" />
-
-    <com.app.afridge.views.AdvancedTextView
-        android:id="@+id/text_login_description"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/padding_small"
-        android:gravity="center"
-        android:padding="@dimen/padding_normal"
-        android:text="@string/hint_login_description"
-        android:textColor="@color/text_secondary"
-        android:textSize="@dimen/text_size_medium"
-        font:customFont="@string/font_light" />
-
-    <com.app.afridge.views.AdvancedTextView
-        android:id="@+id/button_facebook"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:layout_margin="@dimen/padding_small"
-        android:background="#3b5998"
-        android:gravity="center"
-        android:padding="@dimen/padding_normal"
-        android:text="@string/facebook"
-        android:textColor="@color/text_icons"
-        android:textSize="@dimen/text_button_size"
-        font:customFont="@string/font_light" />
-
-    <com.app.afridge.views.AdvancedTextView
-        android:id="@+id/button_twitter"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:layout_margin="@dimen/padding_small"
-        android:background="#4099ff"
-        android:gravity="center"
-        android:padding="@dimen/padding_normal"
-        android:text="@string/twitter"
-        android:textColor="@color/text_icons"
-        android:textSize="@dimen/text_button_size"
-        font:customFont="@string/font_light" />
-
-    <com.app.afridge.views.AdvancedTextView
-        android:id="@+id/button_gplus"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:layout_margin="@dimen/padding_small"
-        android:background="#dd4b39"
-        android:gravity="center"
-        android:padding="@dimen/padding_normal"
-        android:text="@string/gplus"
-        android:textColor="@color/text_icons"
-        android:textSize="@dimen/text_button_size"
-        font:customFont="@string/font_light" />
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <com.app.afridge.views.AdvancedTextView
-            android:id="@+id/button_logout"
+            android:id="@+id/text_login_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
             android:layout_margin="@dimen/padding_small"
-            android:background="@color/primary"
             android:gravity="center"
             android:padding="@dimen/padding_normal"
-            android:text="@string/logout"
+            android:text="@string/hint_login_description"
+            android:textColor="@color/text_secondary"
+            android:textSize="@dimen/text_size_medium"
+            font:customFont="@string/font_light" />
+
+        <com.app.afridge.views.AdvancedTextView
+            android:id="@+id/button_facebook"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_margin="@dimen/padding_small"
+            android:background="#3b5998"
+            android:gravity="center"
+            android:padding="@dimen/padding_normal"
+            android:text="@string/facebook"
             android:textColor="@color/text_icons"
             android:textSize="@dimen/text_button_size"
             font:customFont="@string/font_light" />
-    </RelativeLayout>
 
-</LinearLayout>
+        <com.app.afridge.views.AdvancedTextView
+            android:id="@+id/button_twitter"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_margin="@dimen/padding_small"
+            android:background="#4099ff"
+            android:gravity="center"
+            android:padding="@dimen/padding_normal"
+            android:text="@string/twitter"
+            android:textColor="@color/text_icons"
+            android:textSize="@dimen/text_button_size"
+            font:customFont="@string/font_light" />
+
+        <com.app.afridge.views.AdvancedTextView
+            android:id="@+id/button_gplus"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_margin="@dimen/padding_small"
+            android:background="#dd4b39"
+            android:gravity="center"
+            android:padding="@dimen/padding_normal"
+            android:text="@string/gplus"
+            android:textColor="@color/text_icons"
+            android:textSize="@dimen/text_button_size"
+            font:customFont="@string/font_light" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <com.app.afridge.views.AdvancedTextView
+                android:id="@+id/text_last_synced"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/button_logout"
+                android:layout_margin="@dimen/padding_small"
+                android:gravity="end"
+                android:text="@string/last_synced"
+                android:textColor="@color/text_secondary"
+                font:customFont="@string/font_light" />
+
+            <com.app.afridge.views.AdvancedTextView
+                android:id="@+id/button_logout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_margin="@dimen/padding_small"
+                android:background="@color/primary"
+                android:gravity="center"
+                android:padding="@dimen/padding_normal"
+                android:text="@string/logout"
+                android:textColor="@color/text_icons"
+                android:textSize="@dimen/text_button_size"
+                font:customFont="@string/font_light" />
+        </RelativeLayout>
+
+    </LinearLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
