--- a/app/src/main/res/layout/fragment_customize.xml
+++ b/app/src/main/res/layout/fragment_customize.xml
@@ -1,17 +1,16 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-                                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                                    xmlns:tools="http://schemas.android.com/tools"
-                                    xmlns:font="http://schemas.android.com/apk/res-auto"
-                                    xmlns:slideswitch="http://schemas.android.com/apk/res-auto"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:layout_gravity="center"
-                                    android:padding="@dimen/padding_normal"
-                                    card_view:cardCornerRadius="4dp"
-                                    card_view:cardElevation="2dp">
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:font="http://schemas.android.com/apk/res-auto"
+    xmlns:slideswitch="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_gravity="center"
+    android:padding="@dimen/padding_normal"
+    card_view:cardCornerRadius="4dp"
+    card_view:cardElevation="2dp">
 
-    <RelativeLayout
-        xmlns:tools="http://schemas.android.com/tools"
+    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context="com.app.afridge.ui.fragments.wizard.CustomizeFragment">
@@ -19,59 +18,59 @@
         <com.app.afridge.views.Typewriter
             android:id="@+id/text_title_customize"
             android:layout_width="match_parent"
-            android:padding="@dimen/padding_normal"
+            android:layout_height="wrap_content"
             android:layout_margin="@dimen/activity_vertical_margin"
             android:gravity="center"
-            android:textSize="@dimen/text_size_large"
+            android:padding="@dimen/padding_normal"
             android:text="@string/customize_title"
             android:textColor="@color/primary_dark"
-            android:layout_height="wrap_content"
-            font:customFont="@string/font_light"/>
+            android:textSize="@dimen/text_size_large"
+            font:customFont="@string/font_light" />
 
         <View
             android:id="@+id/separator1"
-            android:background="@color/divider"
             android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:layout_below="@+id/text_title_customize"
             android:layout_marginEnd="@dimen/activity_vertical_margin"
             android:layout_marginStart="@dimen/activity_vertical_margin"
-            android:layout_below="@+id/text_title_customize"
-            android:layout_height="1px"/>
+            android:background="@color/divider" />
 
         <com.app.afridge.views.Typewriter
             android:id="@+id/text_measurement_type"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/padding_normal"
             android:layout_below="@+id/text_title_customize"
+            android:layout_margin="@dimen/padding_normal"
+            android:gravity="center"
             android:text="@string/measurement_type"
             android:textAllCaps="true"
-            android:gravity="center"
             android:textColor="@color/text_secondary"
-            font:customFont="@string/font_light"/>
+            font:customFont="@string/font_light" />
 
         <RelativeLayout
             android:id="@+id/text_measurement_type_value"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/text_measurement_type"
             android:layout_marginEnd="@dimen/padding_normal"
             android:layout_marginStart="@dimen/padding_normal"
-            android:layout_marginTop="@dimen/padding_small"
-            android:layout_below="@+id/text_measurement_type">
+            android:layout_marginTop="@dimen/padding_small">
 
             <!--metric-->
             <com.app.afridge.views.Typewriter
                 android:id="@+id/text_measurement_type_metric"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
                 android:layout_margin="@dimen/padding_normal"
+                android:layout_toLeftOf="@+id/switch_measurement_type"
+                android:layout_toStartOf="@+id/switch_measurement_type"
+                android:gravity="center"
                 android:text="@string/metric"
                 android:textAllCaps="true"
-                android:gravity="center"
-                android:layout_toStartOf="@+id/switch_measurement_type"
-                android:layout_toLeftOf="@+id/switch_measurement_type"
-                android:layout_centerVertical="true"
                 android:textColor="@color/text_primary"
-                font:customFont="@string/font_light"/>
+                font:customFont="@string/font_light" />
 
             <com.app.afridge.views.SlideSwitch
                 android:id="@+id/switch_measurement_type"
@@ -80,96 +79,101 @@
                 android:layout_centerInParent="true"
                 slideswitch:isOpen="false"
                 slideswitch:shape="circle"
-                slideswitch:themeColor="@color/accent"/>
+                slideswitch:themeColor="@color/accent" />
 
             <!--imperial-->
             <com.app.afridge.views.Typewriter
                 android:id="@+id/text_measurement_type_imperial"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
                 android:layout_margin="@dimen/padding_normal"
-                android:text="@string/imperial"
-                android:textAllCaps="true"
-                android:gravity="center"
                 android:layout_toEndOf="@+id/switch_measurement_type"
                 android:layout_toRightOf="@+id/switch_measurement_type"
-                android:layout_centerVertical="true"
+                android:gravity="center"
+                android:text="@string/imperial"
+                android:textAllCaps="true"
                 android:textColor="@color/text_primary"
-                font:customFont="@string/font_light"/>
+                font:customFont="@string/font_light" />
         </RelativeLayout>
 
         <View
             android:id="@+id/separator2"
-            android:background="@color/divider"
             android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:layout_below="@+id/text_measurement_type_value"
             android:layout_marginEnd="@dimen/activity_vertical_margin"
             android:layout_marginStart="@dimen/activity_vertical_margin"
-            android:layout_below="@+id/text_measurement_type_value"
-            android:layout_height="1px"/>
+            android:background="@color/divider" />
 
         <com.app.afridge.views.Typewriter
             android:id="@+id/text_show_notifications"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:layout_marginStart="@dimen/padding_normal"
-            android:layout_marginEnd="@dimen/padding_normal"
             android:layout_below="@+id/text_measurement_type_value"
+            android:layout_marginEnd="@dimen/padding_normal"
+            android:layout_marginStart="@dimen/padding_normal"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:gravity="center"
             android:text="@string/show_notifications"
             android:textAllCaps="true"
-            android:gravity="center"
             android:textColor="@color/text_secondary"
-            font:customFont="@string/font_light"/>
+            font:customFont="@string/font_light" />
 
         <CheckBox
             android:id="@+id/checkbox_show_notifications"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
             android:layout_below="@+id/text_show_notifications"
-            android:layout_margin="@dimen/padding_normal"/>
+            android:layout_centerHorizontal="true"
+            android:layout_margin="@dimen/padding_normal" />
 
         <View
             android:id="@+id/separator3"
-            android:background="@color/divider"
             android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:layout_below="@+id/checkbox_show_notifications"
             android:layout_marginEnd="@dimen/activity_vertical_margin"
             android:layout_marginStart="@dimen/activity_vertical_margin"
-            android:layout_below="@+id/checkbox_show_notifications"
-            android:layout_height="1px"/>
+            android:background="@color/divider" />
 
         <com.app.afridge.views.Typewriter
             android:id="@+id/text_description_customize"
-            android:layout_margin="@dimen/activity_vertical_margin"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/button_done"
+            android:layout_below="@+id/separator3"
+            android:layout_margin="@dimen/activity_vertical_margin"
+            android:gravity="center|bottom"
             android:padding="@dimen/padding_normal"
-            android:gravity="center"
-            android:textSize="@dimen/text_size_medium"
             android:text="@string/customize_description"
             android:textColor="@color/text_secondary"
-            android:layout_above="@+id/button_done"
-            android:layout_height="wrap_content"
-            font:customFont="@string/font_light"/>
+            android:textSize="@dimen/text_size_medium"
+            font:customFont="@string/font_light" />
 
-        <com.gc.materialdesign.views.ButtonRectangle
+        <com.app.afridge.views.AdvancedTextView
             android:id="@+id/button_done"
-            android:layout_width="wrap_content"
-            android:layout_above="@+id/height_hack"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:layout_centerHorizontal="true"
-            android:layout_marginStart="@dimen/activity_vertical_margin"
+            android:layout_above="@+id/height_hack"
             android:layout_marginEnd="@dimen/activity_vertical_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginLeft="@dimen/activity_vertical_margin"
+            android:layout_marginRight="@dimen/activity_vertical_margin"
+            android:layout_marginStart="@dimen/activity_vertical_margin"
             android:background="@color/primary"
-            android:text="@string/done"/>
+            android:elevation="4dp"
+            android:gravity="center"
+            android:padding="@dimen/padding_normal"
+            android:text="@string/done"
+            android:textColor="@color/text_icons"
+            android:textSize="@dimen/text_button_size"
+            font:customFont="@string/font_light" />
 
         <View
             android:id="@+id/height_hack"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_alignParentBottom="true"/>
+            android:layout_alignParentBottom="true" />
 
     </RelativeLayout>
 </android.support.v7.widget.CardView>
