--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar_actionbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="?actionBarSize"
         android:background="@color/primary_dark"
         android:elevation="4dp"
         iosched:popupTheme="@style/ActionBarPopupThemeOverlay"
