layout and bug fixes

--- a/app/src/main/res/layout-xlarge/fragment_social_login.xml
+++ b/app/src/main/res/layout-xlarge/fragment_social_login.xml
@@ -28,22 +28,21 @@
 
         <ImageView
             android:id="@+id/image_facebook"
-            android:layout_width="160dp"
-            android:layout_height="160dp"
+            android:layout_width="240dp"
+            android:layout_height="240dp"
             android:layout_alignLeft="@+id/text_title_social"
             android:layout_alignStart="@+id/text_title_social"
             android:layout_below="@+id/text_title_social"
-            android:layout_marginLeft="52dp"
-            android:layout_marginStart="52dp"
+            android:layout_marginLeft="62dp"
+            android:layout_marginStart="62dp"
             android:layout_marginTop="28dp"
-            android:adjustViewBounds="true"
             android:contentDescription="@string/app_name"
             android:src="@drawable/facebook" />
 
         <ImageView
             android:id="@+id/image_twitter"
-            android:layout_width="160dp"
-            android:layout_height="160dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignEnd="@+id/text_title_social"
             android:layout_alignRight="@+id/text_title_social"
             android:layout_centerVertical="true"
@@ -55,11 +54,11 @@
 
         <ImageView
             android:id="@+id/image_gplus"
-            android:layout_width="175dp"
-            android:layout_height="175dp"
-            android:layout_above="@+id/text_description_social"
-            android:layout_below="@+id/image_facebook"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/image_twitter"
             android:layout_centerHorizontal="true"
+            android:layout_marginTop="100dp"
             android:adjustViewBounds="true"
             android:contentDescription="@string/app_name"
             android:src="@drawable/gplus" />
@@ -69,12 +68,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_above="@+id/height_hack"
-            android:layout_marginEnd="@dimen/activity_vertical_margin"
-            android:layout_marginStart="@dimen/activity_vertical_margin"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:layout_margin="@dimen/activity_vertical_margin"
             android:gravity="center"
-            android:paddingLeft="@dimen/padding_normal"
-            android:paddingRight="@dimen/padding_normal"
+            android:padding="@dimen/activity_vertical_margin"
             android:text="@string/social_description"
             android:textColor="@color/text_secondary"
             android:textSize="@dimen/text_size_medium"
