--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -24,4 +24,5 @@
     <dimen name="icon_delete">42dp</dimen>
     <dimen name="divider">0.3dp</dimen>
     <dimen name="picker_item_size">60dp</dimen>
+    <dimen name="radius_circular">32dp</dimen>
 </resources>
