--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -31,7 +31,7 @@
                 android:layout_marginTop="@dimen/activity_vertical_margin"
                 android:adjustViewBounds="true"
                 android:contentDescription="@string/app_name"
-                android:src="@mipmap/ic_launcher" />
+                android:src="@drawable/web_hi_res_512" />
 
             <com.app.afridge.views.AdvancedTextView
                 android:id="@+id/text_username"
