replaced view pager indicator with the simpler circle indicator

--- a/app/src/main/res/layout/activity_first_time_wizard.xml
+++ b/app/src/main/res/layout/activity_first_time_wizard.xml
@@ -1,39 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:padding="@dimen/activity_horizontal_margin">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="@dimen/activity_horizontal_margin">
 
     <View
         android:id="@+id/status_height_hack"
         android:layout_width="match_parent"
-        android:layout_height="0dp"/>
+        android:layout_height="0dp" />
 
     <com.app.afridge.views.NonSwipableViewPager
         android:id="@+id/viewpager"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_weight="1" />
 
-    <com.viewpagerindicator.CirclePageIndicator
+    <me.relex.circleindicator.CircleIndicator
         android:id="@+id/indicator"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="24dp"
+        android:paddingBottom="@dimen/padding_small"
         android:paddingLeft="@dimen/padding_normal"
         android:paddingRight="@dimen/padding_normal"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/padding_small"
-        app:fillColor="@color/accent"
-        app:pageColor="@color/divider"
-        app:radius="5dp"
-        app:strokeColor="@color/text_secondary"
-        app:strokeWidth="1dp"/>
+        android:paddingTop="@dimen/padding_normal"
+        app:ci_drawable="@drawable/black_radius"
+        app:ci_height="6dp"
+        app:ci_width="6dp" />
+    <!--app:fillColor="@color/accent"-->
+    <!--app:pageColor="@color/divider"-->
+    <!--app:radius="5dp"-->
+    <!--app:strokeColor="@color/text_secondary"-->
+    <!--app:strokeWidth="1dp"-->
 
     <View
         android:id="@+id/height_hack"
         android:layout_width="match_parent"
-        android:layout_height="0dp"/>
+        android:layout_height="0dp" />
 
 </LinearLayout>
