--- a/app/src/main/res/layout/widget_item_fridge.xml
+++ b/app/src/main/res/layout/widget_item_fridge.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/stackWidgetItem"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:layout_margin="@dimen/padding_small"
-    android:background="@android:drawable/dialog_holo_light_frame"
+    android:background="@android:color/white"
     android:padding="@dimen/padding_normal">
 
     <ImageView
         android:id="@+id/image_item"
-        android:layout_width="@dimen/grid_image_size"
-        android:layout_height="@dimen/grid_image_size"
-        android:layout_margin="@dimen/padding_normal"
+        android:layout_width="@dimen/widget_item_logo"
+        android:layout_height="@dimen/widget_item_logo"
+        android:layout_marginBottom="@dimen/padding_small"
+        android:layout_marginEnd="@dimen/padding_normal"
+        android:layout_marginStart="@dimen/padding_normal"
+        android:layout_marginTop="@dimen/padding_small"
         android:adjustViewBounds="true"
         android:contentDescription="@string/app_name" />
 
